2004-05-18  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/include/Basic.h (fl_set_err_logfp): function was known as
	'fl_set_error_logfp' in XForms 0.89. Define a typedef to map
	from the old to the new.

2004-05-18  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/demo27.c:
	* demos/iconify.c:
	* demos/pup.c:
	* fdesign/fd_attribs.c:
	* fdesign/fd_main.c:
	* fdesign/fd_main.h:
	* fdesign/fd_rubber.c:
	* gl/glcanvas.c:
	* image/flimage.h:
	* image/flimage_int.h:
	* image/image.c:
	* image/image_disp.c:
	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jquant.c:
	* image/image_marker.c:
	* image/image_proc.c:
	* image/image_xwd.c:
	* image/matrix.c:
	* lib/asyn_io.c:
	* lib/canvas.c:
	* lib/child.c:
	* lib/choice.c:
	* lib/flcolor.c:
	* lib/flinternal.h:
	* lib/flresource.c:
	* lib/forms.c:
	* lib/fselect.c:
	* lib/input.c:
	* lib/listdir.c:
	* lib/menu.c:
	* lib/objects.c:
	* lib/pixmap.c:
	* lib/win.c:
	* lib/xdraw.c:
	* lib/xpopup.c:
	* lib/xsupport.c:
	* lib/include/Basic.h:
	* lib/include/XBasic.h:
	* lib/include/bitmap.h:
	* lib/include/button.h:
	* lib/include/canvas.h:
	* lib/include/choice.h:
	* lib/include/menu.h:
	* lib/include/popup.h:
	* lib/private/pcanvas.h:
	* lib/private/ptextbox.h: s/unsigned/unsigned int/

2004-05-17  Angus Leeming  <angus.leeming@btopenworld.com>

	Revert some functions to the same API as was used in XForms
	version 0.89, patch level 5. In all cases, this is just a case of using
	the typedef rather than the raw type.

	* lib/browser.c (fl_create_browser, fl_add_browser):
	* lib/include/browser.h (fl_create_browser, fl_add_browser): use FL_Coord.

	* lib/flcolor.c (fl_bk_color, fl_bk_textcolor):
	* lib/include/Basic.h (fl_bk_color, fl_bk_textcolor): use FL_COLOR.

	* lib/flresource.c (fl_initialize):
	* lib/include/XBasic.h (fl_initialize): use FL_CMD_OPT *.

	* lib/formbrowser.c (fl_add_formbrowser):
	* lib/include/formbrowser.h (fl_add_formbrowser): use FL_Coord.

	* lib/oneliner.c (fl_show_oneliner):